# TagImage

./: CMakeLists.txt  LICENSE.txt  README.md
TagImage/: CMakeLists.txt  ImaggaClient.cpp  ImaggaClient.h  TagImage.cpp  XMPTagger.cpp  XMPTagger.h  config.txt
